# money-nexus

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/mcp-servers/: ynab-mcp.py
src/mcp_servers/: ynab_mcp.py
tests/: conftest.py  test_example.py
tools/: validate-commit-message.py
